service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: spike
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - protocol: TCP
      name: http
      port: 82
      targetPort: 80
