three-deployment-service.yaml
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: aks
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: arunvenkatram/helloapp
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: aks
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 84
      targetPort: 8080
